ms-manifests/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visionaid-sonarqube-ingress
  namespace: visionaid-flux-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: visionaid-sonarqube.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
  tls:
    - hosts:
        - visionaid-sonarqube.kube.isc.heia-fr.ch
